[YouTube] Fix test